fix: fixed path and change structure

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -10,9 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../assets/styles/normalize.css" />
-    <link rel="stylesheet" href="../../assets/styles/variables.css" />
-    <link rel="stylesheet" href="../pages/style.css" />
+    <link rel="stylesheet" href="./assets/styles/normalize.css" />
+    <link rel="stylesheet" href="./assets/styles/variables.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Online-zoo</title>
   </head>
   <body>
@@ -62,7 +62,7 @@
           <div class="backstage__inner">
             <img
               class="backstage__img"
-              src="../../assets/images/backstage/backstage-logo.png"
+              src="./assets/images/backstage/backstage-logo.png"
               alt="backstage-img"
             />
             <div class="backstage__info">
@@ -96,14 +96,14 @@
             <div class="pets-slider__item slider-item">
               <img
                 class="slider-item__img"
-                src="../../assets/images/pets/pets-img-1.png"
+                src="./assets/images/pets/pets-img-1.png"
                 alt="slider-img"
               />
               <div class="slider-item__inner">
                 <h4 class="slider-item__title">giant Pandas</h4>
                 <img
                   class="slider-item__icon"
-                  src="../../assets/icons/pets/banana-bamboo_icon.svg"
+                  src="./assets/icons/pets/banana-bamboo_icon.svg"
                   alt="slider-icon"
                 />
                 <p class="slider-item__text">Native to Southwest China</p>
@@ -112,14 +112,14 @@
             <div class="pets-slider__item slider-item">
               <img
                 class="slider-item__img"
-                src="../../assets/images/pets/pets-img-2.png"
+                src="./assets/images/pets/pets-img-2.png"
                 alt="slider-img"
               />
               <div class="slider-item__inner">
                 <h4 class="slider-item__title">Eagles</h4>
                 <img
                   class="slider-item__icon"
-                  src="../../assets/icons/pets/meet-fish_icon.svg"
+                  src="./assets/icons/pets/meet-fish_icon.svg"
                   alt="slider-icon"
                 />
                 <p class="slider-item__text">Native to South America</p>
@@ -128,14 +128,14 @@
             <div class="pets-slider__item slider-item">
               <img
                 class="slider-item__img"
-                src="../../assets/images/pets/pets-img-3.png"
+                src="./assets/images/pets/pets-img-3.png"
                 alt="slider-img"
               />
               <div class="slider-item__inner">
                 <h4 class="slider-item__title">Gorillas</h4>
                 <img
                   class="slider-item__icon"
-                  src="../../assets/icons/pets/banana-bamboo_icon.svg"
+                  src="./assets/icons/pets/banana-bamboo_icon.svg"
                   alt="slider-icon"
                 />
                 <p class="slider-item__text">Native to Congo</p>
@@ -144,14 +144,14 @@
             <div class="pets-slider__item slider-item">
               <img
                 class="slider-item__img"
-                src="../../assets/images/pets/pets-img-4.png"
+                src="./assets/images/pets/pets-img-4.png"
                 alt="slider-img"
               />
               <div class="slider-item__inner">
                 <h4 class="slider-item__title">Two-toed Sloth</h4>
                 <img
                   class="slider-item__icon"
-                  src="../../assets/icons/pets/banana-bamboo_icon.svg"
+                  src="./assets/icons/pets/banana-bamboo_icon.svg"
                   alt="slider-img"
                 />
                 <p class="slider-item__text">Mesoamerica, South America</p>
@@ -160,14 +160,14 @@
             <div class="pets-slider__item slider-item">
               <img
                 class="slider-item__img"
-                src="../../assets/images/pets/pets-img-5.png"
+                src="./assets/images/pets/pets-img-5.png"
                 alt="slider-img"
               />
               <div class="slider-item__inner">
                 <h4 class="slider-item__title">cheetahs</h4>
                 <img
                   class="slider-item__icon"
-                  src="../../assets/icons/pets/meet-fish_icon.svg"
+                  src="./assets/icons/pets/meet-fish_icon.svg"
                   alt="slider-img"
                 />
                 <p class="slider-item__text">Native to Africa</p>
@@ -176,14 +176,14 @@
             <div class="pets-slider__item slider-item">
               <img
                 class="slider-item__img"
-                src="../../assets/images/pets/pets-img-6.png"
+                src="./assets/images/pets/pets-img-6.png"
                 alt="slider-img"
               />
               <div class="slider-item__inner">
                 <h4 class="slider-item__title">Penguins</h4>
                 <img
                   class="slider-item__icon"
-                  src="../../assets/icons/pets/meet-fish_icon.svg"
+                  src="./assets/icons/pets/meet-fish_icon.svg"
                   alt="slider-img"
                 />
                 <p class="slider-item__text">Native to Antarctica</p>
@@ -220,27 +220,27 @@
             <div class="widgets">
               <img
                 class="widget-card"
-                src="../../assets/icons/how-it-works/widget-card.svg"
+                src="./assets/icons/how-it-works/widget-card.svg"
                 alt="widget-card"
               />
               <img
                 class="widget-arrow"
-                src="../../assets/icons/how-it-works/widget-arrow.svg"
+                src="./assets/icons/how-it-works/widget-arrow.svg"
                 alt="widget-arrow"
               />
               <img
                 class="widget-payment"
-                src="../../assets/icons/how-it-works/widget-payment.svg"
+                src="./assets/icons/how-it-works/widget-payment.svg"
                 alt="widget-payment"
               />
               <img
                 class="widget-arrow"
-                src="../../assets/icons/how-it-works/widget-arrow.svg"
+                src="./assets/icons/how-it-works/widget-arrow.svg"
                 alt="widget-arrow"
               />
               <img
                 class="widget-result"
-                src="../../assets/icons/how-it-works/widget-result.svg"
+                src="./assets/icons/how-it-works/widget-result.svg"
                 alt="widget-result"
               />
             </div>
@@ -258,7 +258,7 @@
                 <div class="testimonials__item-user item-user">
                   <img
                     class="item-user__icon"
-                    src="../../assets/icons/testemonials/item-user-icon-1.svg"
+                    src="./assets/icons/testemonials/item-user-icon-1.svg"
                     alt="item-user-icon"
                   />
                   <div class="item-user__name">Michael John</div>
@@ -286,7 +286,7 @@
                 <div class="testimonials__item-user item-user">
                   <img
                     class="item-user__icon"
-                    src="../../assets/icons/testemonials/item-user-icon-2.svg"
+                    src="./assets/icons/testemonials/item-user-icon-2.svg"
                     alt="item-user-icon"
                   />
                   <div class="item-user__name">Oska Samborska</div>
@@ -314,7 +314,7 @@
                 <div class="testimonials__item-user item-user">
                   <img
                     class="item-user__icon"
-                    src="../../assets/icons/testemonials/item-user-icon-4.svg"
+                    src="./assets/icons/testemonials/item-user-icon-4.svg"
                     alt="item-user-icon"
                   />
                   <div class="item-user__name">Fredericka Michelin</div>
@@ -341,7 +341,7 @@
               <div class="testimonials__item-user item-user">
                 <img
                   class="item-user__icon"
-                  src="../../assets/icons/testemonials/item-user-icon-3.svg"
+                  src="./assets/icons/testemonials/item-user-icon-3.svg"
                   alt="item-user-icon"
                 />
                 <div class="item-user__name">Oskar Samborsky</div>
