fix: fixed path structure

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -19,7 +19,11 @@
     <header class="header">
       <div class="container">
         <div class="header__inner">
-          <a class="header__logo logo" href="#">PetStory online</a>
+          <a
+            class="header__logo logo"
+            href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks"
+            >PetStory online</a
+          >
           <nav class="header__navbar navbar">
             <ul class="navbar__items">
               <li class="navbar__item">
