feat: add adaptiv on 1000px width

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/styles/normalize.css" />
     <link rel="stylesheet" href="./assets/styles/variables.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css" />
     <title>Online-zoo</title>
   </head>
   <body>
@@ -385,7 +386,6 @@
         </div>
       </section>
     </main>
-
     <footer class="footer">
       <div class="container">
         <div class="footer__wrapper">
