--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -45,6 +45,11 @@
             </ul>
           </nav>
           <div class="navbar__copy">Designed by ©</div>
+          <button class="header__button burger-menu-button">
+            <div class="burger-menu__inner">
+              <span class="burger-menu__line"></span>
+            </div>
+          </button>
         </div>
       </div>
     </header>
@@ -53,7 +58,7 @@
       <section class="favorite">
         <div class="container">
           <div class="favorite__inner">
-            <div class="favorit__bcg-circle"></div>
+            <div class="favorite__bcg-circle"></div>
             <h1 class="favorite__title">
               Watch your <span>favorite</span> animal online
             </h1>
@@ -399,6 +404,12 @@
             />
             <button class="footer-form__button">Submit</button>
           </form>
+          <div class="footer-wrapper__tablet-contacts">
+            <a class="footer-contacts__link facebook" href="#"></a>
+            <a class="footer-contacts__link twitter" href="#"></a>
+            <a class="footer-contacts__link instagram" href="#"></a>
+            <a class="footer-contacts__link youtube" href="#"></a>
+          </div>
         </div>
         <button class="footer__button button button-secondary">
           donate for volunteers
