feat: add adaptive on mobile resolution 320px

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -66,6 +66,7 @@
           </div>
         </div>
       </section>
+      <button class="button favorite__btn-mobile">watch online</button>
 
       <section class="backstage">
         <div class="container">
@@ -391,6 +392,7 @@
         </div>
       </section>
     </main>
+
     <footer class="footer">
       <div class="container">
         <div class="footer__wrapper">
