--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -53,6 +53,31 @@
           </button>
         </div>
       </div>
+      <div class="header__menu-mobile mobile-menu">
+        <h2 class="mobile-menu__logo logo">PetStory online</h2>
+        <ul class="mobile-menu__list">
+          <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="#">About</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="#">Map</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="#">Zoos</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="#">Donate</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="#">Contact us</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="#">Designed by ©</a>
+          </li>
+        </ul>
+        <div class="menu-mobile__close">X</div>
+      </div>
+      <div class="overlay"></div>
     </header>
 
     <main class="main">
@@ -367,7 +392,7 @@
         <div class="container">
           <h2 class="testimonials__title">Testimonials</h2>
           <div class="testimonials__inner">
-            <div class="testimonials__item">
+            <div class="testimonials__item" data-popup="popup">
               <div class="testimonials__item-wrapper">
                 <div class="testimonials__item-user item-user">
                   <img
@@ -394,8 +419,9 @@
                   instill a love for animals.
                 </p>
               </div>
+              <button class="popup-close">X</button>
             </div>
-            <div class="testimonials__item">
+            <div class="testimonials__item" data-popup="popup">
               <div class="testimonials__item-wrapper">
                 <div class="testimonials__item-user item-user">
                   <img
@@ -422,8 +448,9 @@
                   instill a love for animals.
                 </p>
               </div>
+              <div class="popup-close">X</div>
             </div>
-            <div class="testimonials__item">
+            <div class="testimonials__item" data-popup="popup">
               <div class="testimonials__item-wrapper">
                 <div class="testimonials__item-user item-user">
                   <img
@@ -450,8 +477,9 @@
                   instill a love for animals.
                 </p>
               </div>
+              <div class="popup-close">X</div>
             </div>
-            <div class="testimonials__item">
+            <div class="testimonials__item" data-popup="popup">
               <div class="testimonials__item-user item-user">
                 <img
                   class="item-user__icon"
@@ -478,21 +506,216 @@
                 ljves to watch gouillas. Online zoo is one jf the ways to
                 instill a love for animals.The best online zoo I’ve met. My son
                 delighted very much ljves to watch gouillas. Online zoo is one
-                jf the ways to instill a love for animals.
+              </p>
+            </div>
+            <div class="testimonials__item" data-popup="popup">
+              <div class="testimonials__item-user item-user">
+                <img
+                  class="item-user__icon"
+                  src="./assets/icons/testemonials/item-user-icon-3.svg"
+                  alt="item-user-icon"
+                />
+                <div class="item-user__name">Oskar Samborsky</div>
+                <div class="item-user__location">
+                  Local Austria
+                  <span class="item-user__date"> Yesterday </span>
+                </div>
+              </div>
+              <p class="testimonials__item-text">
+                Online zoo is one jf the ways to instill a love for animals.The
+                best online zoo I’ve met. My son delighted very much ljves to
+                watch gouillas. Online zoo is one jf the ways to instill a love
+                for animals.The best online zoo I’ve met. My son delighted very
+                much ljves to watch gouillas. The best online zoo I’ve met. My
+                son delighted very much ljves to watch gouillas. Online zoo is
+                one jf the ways to instill a love for animals.The best online
+                zoo I’ve met. My son delighted very much ljves to watch
+                gouillas. Online zoo is one jf the ways to instill a love for
+                animals.
+              </p>
+            </div>
+            <div class="testimonials__item" data-popup="popup">
+              <div class="testimonials__item-wrapper">
+                <div class="testimonials__item-user item-user">
+                  <img
+                    class="item-user__icon"
+                    src="./assets/icons/testemonials/item-user-icon-1.svg"
+                    alt="item-user-icon"
+                  />
+                  <div class="item-user__name">Michael John</div>
+                  <div class="item-user__location">
+                    Local Austria
+                    <span class="item-user__date"> Today </span>
+                  </div>
+                </div>
+                <p class="testimonials__item-text">
+                  The best online zoo I’ve met. My son delighted very much ljves
+                  to watch gouillas. Online zoo is one jf the ways to instill a
+                  love for animals.The best online zoo I’ve met. My son
+                  delighted very much ljves to watch gouillas. Online zoo is one
+                  jf the ways to instill a love for animals. The best online zoo
+                  I’ve met. My son delighted very much ljves to watch gouillas.
+                  Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.
+                </p>
+              </div>
+              <div class="popup-close">X</div>
+            </div>
+            <div class="testimonials__item" data-popup="popup">
+              <div class="testimonials__item-wrapper">
+                <div class="testimonials__item-user item-user">
+                  <img
+                    class="item-user__icon"
+                    src="./assets/icons/testemonials/item-user-icon-2.svg"
+                    alt="item-user-icon"
+                  />
+                  <div class="item-user__name">Oska Samborska</div>
+                  <div class="item-user__location">
+                    Local Austria
+                    <span class="item-user__date"> Yesterday </span>
+                  </div>
+                </div>
+                <p class="testimonials__item-text">
+                  Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.The best online zoo I’ve met. My
+                  son delighted very much ljves to watch gouillas. The best
+                  online zoo I’ve met. My son delighted very much ljves to watch
+                  gouillas. Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.
+                </p>
+              </div>
+              <div class="popup-close">X</div>
+            </div>
+            <div class="testimonials__item" data-popup="popup">
+              <div class="testimonials__item-wrapper">
+                <div class="testimonials__item-user item-user">
+                  <img
+                    class="item-user__icon"
+                    src="./assets/icons/testemonials/item-user-icon-4.svg"
+                    alt="item-user-icon"
+                  />
+                  <div class="item-user__name">Fredericka Michelin</div>
+                  <div class="item-user__location">
+                    Local Austria
+                    <span class="item-user__date"> Yesterday </span>
+                  </div>
+                </div>
+                <p class="testimonials__item-text">
+                  My son delighted very much ljves to watch gouillas. Online zoo
+                  is one jf the ways to instill a love for animals.The best
+                  online zoo I’ve met. My son delighted very much ljves to watch
+                  gouillas. Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. The best online zoo Ive
+                  met. My son delighted very much ljves to watch gouillas.
+                  Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.
+                </p>
+              </div>
+              <div class="popup-close">X</div>
+            </div>
+            <div class="testimonials__item" data-popup="popup">
+              <div class="testimonials__item-user item-user">
+                <img
+                  class="item-user__icon"
+                  src="./assets/icons/testemonials/item-user-icon-3.svg"
+                  alt="item-user-icon"
+                />
+                <div class="item-user__name">Oskar Samborsky</div>
+                <div class="item-user__location">
+                  Local Austria
+                  <span class="item-user__date"> Yesterday </span>
+                </div>
+              </div>
+              <p class="testimonials__item-text">
+                Online zoo is one jf the ways to instill a love for animals.The
+                best online zoo I’ve met. My son delighted very much ljves to
+                watch gouillas. Online zoo is one jf the ways to instill a love
+                for animals.The best online zoo I’ve met. My son delighted very
+                much ljves to watch gouillas. The best online zoo Ive met. My
+                son delighted very much ljves to watch gouillas. Online zoo is
+                one jf the ways to instill a love for animals.The best online
+                zoo I’ve met. My son delighted very much ljves to watch
+                gouillas. Online zoo is one jf the ways to instill a love for
+                animals. best online zoo Ive met. My son delighted very much
+                ljves to watch gouillas. Online zoo is one jf the ways to
+                instill a love for animals.The best online zoo I’ve met. My son
+                delighted very much ljves to watch gouillas. Online zoo is one
+              </p>
+            </div>
+            <div class="testimonials__item" data-popup="popup">
+              <div class="testimonials__item-user item-user">
+                <img
+                  class="item-user__icon"
+                  src="./assets/icons/testemonials/item-user-icon-3.svg"
+                  alt="item-user-icon"
+                />
+                <div class="item-user__name">Oskar Samborsky</div>
+                <div class="item-user__location">
+                  Local Austria
+                  <span class="item-user__date"> Yesterday </span>
+                </div>
+              </div>
+              <p class="testimonials__item-text">
+                Online zoo is one jf the ways to instill a love for animals.The
+                best online zoo I’ve met. My son delighted very much ljves to
+                watch gouillas. Online zoo is one jf the ways to instill a love
+                for animals.The best online zoo I’ve met. My son delighted very
+                much ljves to watch gouillas. The best online zoo I’ve met. My
+                son delighted very much ljves to watch gouillas. Online zoo is
+                one jf the ways to instill a love for animals.The best online
+                zoo I’ve met. My son delighted very much ljves to watch
+                gouillas. Online zoo is one jf the ways to instill a love for
+                animals.
+              </p>
+            </div>
+            <div class="testimonials__item" data-popup="popup">
+              <div class="testimonials__item-user item-user">
+                <img
+                  class="item-user__icon"
+                  src="./assets/icons/testemonials/item-user-icon-3.svg"
+                  alt="item-user-icon"
+                />
+                <div class="item-user__name">Oskar Samborsky</div>
+                <div class="item-user__location">
+                  Local Austria
+                  <span class="item-user__date"> Yesterday </span>
+                </div>
+              </div>
+              <p class="testimonials__item-text">
+                Online zoo is one jf the ways to instill a love for animals.The
+                best online zoo I’ve met. My son delighted very much ljves to
+                watch gouillas. Online zoo is one jf the ways to instill a love
+                for animals.The best online zoo I’ve met. My son delighted very
+                much ljves to watch gouillas. The best online zoo I’ve met. My
+                son delighted very much ljves to watch gouillas. Online zoo is
+                one jf the ways to instill a love for animals.The best online
+                zoo I’ve met. My son delighted very much ljves to watch
+                gouillas. Online zoo is one jf the ways to instill a love for
+                animals.
               </p>
             </div>
           </div>
           <input
             class="testimonials__input"
             min="0"
-            max="100"
+            max="7"
             value="0"
+            step="1"
             type="range"
           />
           <button class="testemonials__button button button-secondary">
             leave feedback
           </button>
         </div>
+        <div class="popup-overlay"></div>
       </section>
     </main>
 
